--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,15 @@ static_collected
 
 # Exclude machine-specific vs code settings
 .vscode/settings.json
+node_modules
+target
+dist
+logs
+public
+.cache
+.vscode
+.DS_Store
+.idea
+.next
+yarn-error.log
+npm-debug.log
