--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 Django==4.2.8
 django-filter==23.5
+django-cors-headers==4.3.1
 djangorestframework==3.14.0
 Markdown==3.5.1
 pytz==2023.3.post1
