--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "date-fns-tz": "^2.0.0",
     "moment": "^2.29.4",
     "next": "14.0.2",
+    "primereact": "^10.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
