--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,9 @@ Django==4.2.8
 django-cors-headers==4.3.1
 django-filter==23.5
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 Markdown==3.5.1
 pillow==10.2.0
+PyJWT==2.8.0
 pytz==2023.3.post1
 sqlparse==0.4.4
