--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.5",
     "axios": "^1.6.1",
     "date-fns-tz": "^2.0.0",
+    "dotenv": "^16.3.2",
     "moment": "^2.29.4",
     "next": "14.0.2",
     "primereact": "^10.3.0",
@@ -27,7 +28,8 @@
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
